# Counting-Bot-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/2020-12-11-134003_create_servers/: down.sql  up.sql
src/: main.rs  schema.rs
src/structs/: servers.rs
