[package]
name = "counting-bot-rust"
version = "0.1.0"
authors = ["Evie Viau <evie.viau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.9.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "0.2.24", features = ["macros"] }
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
tokio-diesel = "0.3.0"